--- a/src/Init/index.css
+++ b/src/Init/index.css
@@ -1,7 +1,10 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+  background-color: rgb(35, 35, 35);
+  color: antiquewhite;
+  text-align: center;
 }
