Añadida pantalla de carga

--- a/src/Init/index.css
+++ b/src/Init/index.css
@@ -9,6 +9,16 @@ body {
   text-align: center;
 }
 
+.publi {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.show {
+  width: 90vw;
+}
+
 .hide {
   display: none;
 }
